Dark mode and light mode is fully fixed. Just the background color for the message

--- a/Webapp/public/styles/forgotpassword.css
+++ b/Webapp/public/styles/forgotpassword.css
@@ -1,25 +1,3 @@
-body {
-    background: linear-gradient(-45deg, #90e0ef, #00b4d8, #caf0f8, #00b4d8);
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-.dark-mode {
-    background: linear-gradient(-45deg, #0C134F, #1D267D, #0C134F, #1D267D);
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-
-@keyframes gradient {
-    0%, 100% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-}
-
 #title {
     margin-bottom: 30px;
     font-size: 20px;
@@ -56,7 +34,7 @@ body {
     text-align: right;
 }
 
-#submit {
+#send {
     border: none;
     cursor: pointer;
     background: #7b917d;
@@ -80,13 +58,13 @@ body {
     border-bottom: 1px solid #19A7CE;
 }
 
-#submit:hover {
+#send:hover {
     background: #c57b57;
     transform: scale(1.02);
     transition: all 0.5s ease;
 }
 
-#submit:active {
+#send:active {
     transform: translate(0px, 10px);
     -webkit-transform: translate(0px, 10px);
     box-shadow: 0px 1px 0px 0px;
