--- a/Webapp/public/styles/profile.css
+++ b/Webapp/public/styles/profile.css
@@ -1,27 +1,3 @@
-body {
-    /* background: linear-gradient(-45deg, #90e0ef, #00b4d8, #caf0f8, #00b4d8); */
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-.dark-mode {
-    /* background: linear-gradient(-45deg, #146C94, #19A7CE, #146C94, #19A7CE); */
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-@keyframes gradient {
-
-    0%,
-    100% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-}
-
 .edit-button {
     display: flex;
     flex-direction: column;
