--- a/Webapp/public/styles/signup.css
+++ b/Webapp/public/styles/signup.css
@@ -1,25 +1,3 @@
-body {
-    background: linear-gradient(-45deg, #90e0ef, #00b4d8, #caf0f8, #00b4d8);
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-.dark-mode {
-    background: linear-gradient(-45deg, #003566, #001d3d, #003566, #003566);
-    background-size: 400% 500%;
-    animation: gradient 10s ease infinite;
-}
-
-
-@keyframes gradient {
-    0%, 100% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-}
-
 #title {
     margin-bottom: 30px;
     font-size: 20px;
